# extracontext

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  pypi.yml  python-app.yml
docs/: api.md  index.md  usage.md
examples/: generators.py
extracontext/: __init__.py  _future_task.py  base.py  contextlocal.py  contextlocal_native.py  executor.py  mapping.py
tests/: test_async.py  test_contextmanager.py  test_executor.py  test_generators.py  test_mapping.py  test_pep550.py  test_plain.py  test_thread.py
typecheck/: __pypy__.pyi
