[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["extracontext"]

[tool.setuptools.dynamic]
version = {attr = "extracontext.__version__"}

[project]
name = "python-extracontext"
dynamic = ["version"]
description = "Context Variable namespaces supporting generators, asyncio and multi-threading"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.8"
authors = [{ name = "Joao S. O. Bueno" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/jsbueno/extracontext"


[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "pyflakes",
    "pytest-coverage",
]

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --doctest-modules"

[tool.mypy]
mypy_path = "typecheck"
implicit_reexport = true
